Revert "perf: Optimize user creation and deletion (#22936)" (#23084)
This reverts commit 79f3930b85dfa13dab83866f05593ffbe9c672b0.